--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
                 background-color: grey;
                 padding-left: 20px;
             }
+            .page-footer{
+                background-color: grey;
+            }
         
         </style>
         
