--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         
         <h1>COVID 19 Dashboard</h1>
         <p class="container">This software will provide timely information about the pandemic</p>
-        <a href="http://cnn.com" target ="_blank" style="padding 20px;">CNN</a><br>
+        <a href="http://cnn.com" target ="_blank">CNN</a><br>
         <img src="virus.jpg" style= "width: 300px; padding: 20px;"> <!-- inline-->
         
             <!-- Footer -->
