--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         
           <nav>
             <div class="nav-wrapper">
-              <a href="#" class="brand-logo"><i class="large material-icons">local_hospital</i></a>
+              <a href="#" class="brand-logo"><i class="large material-icons">warning</i></a>
               <ul id="nav-mobile" class="right hide-on-med-and-down">
                 <li><a href="sass.html">United States</a></li>
                 <li><a href="collapsible.html">Canada</a></li>
@@ -90,7 +90,7 @@
                 
                     <div class="card-content">
                       <span class="card-title activator grey-text text-darken-4">COVID 19<i class="material-icons right">more_vert</i></span>
-                      <p><a href="https://github.com/CSSEGISandData/COVID-19/tree/master/csse_covid_19_data/csse_covid_19_daily_reports">John Hopkins Data</a></p>
+                      <p><a href="https://github.com/CSSEGISandData/COVID-19/tree/master/csse_covid_19_data/csse_covid_19_daily_reports" target="_blank">John Hopkins Data</a></p>
                     </div>
                     <div class="card-reveal">
                       <span class="card-title grey-text text-darken-4">Coronvirus Data<i class="material-icons right">close</i></span>
@@ -121,8 +121,8 @@
                       <li><a class="grey-text text-lighten-3" href="https://github.com/YiningZhang108/covid" target="_blank">Github Repository</a></li>
                       <li><a class="grey-text text-lighten-3" href="https://github.com/CSSEGISandData/COVID-19/tree/master/csse_covid_19_data
 " target="_blank">JHU Data</a></li>
-                      <li><a class="grey-text text-lighten-3" href="#!">Link 3</a></li>
-                      <li><a class="grey-text text-lighten-3" href="#!">Link 4</a></li>
+                      <li><a class="grey-text text-lighten-3" href="#!"></a></li>
+                      <li><a class="grey-text text-lighten-3" href="#!"></a></li>
                   </ul>
                   </div>
                 </div>
@@ -130,7 +130,7 @@
               <div class="footer-copyright">
                  <div class="container">
                     Yining Zhang
-                    <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+                    <a class="grey-text text-lighten-4 right" href="#!"></a>
                  </div>
               </div>
             </footer>
